--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,57 +1,61 @@
 .navbar {
-    margin-bottom: 20px;
-  }
-    
-  .navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
+  margin-bottom: 20px;
+}
   
-  .nav-icon {
-    margin-right: 5px;
-    font-size: 18px;
-    color: #8c00ff;
-  }
-    
-  .nav-link {
-    color: #ffffff !important;
-    transition: color 0.3s ease;
-    font-size: 1.2rem;
-    position: relative;
-    font-weight: bold;
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
 
-  }
+.navbar-brand img {
+  width: 35px; 
+  height: 35px; 
+  margin-right: 10px; 
+}
+
+.nav-icon {
+  margin-right: 5px;
+  font-size: 18px;
+  color: #00008B;
+}
   
-  .nav-link::before {
-    content: ''; 
-    position: absolute;
-    bottom: -2px; 
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #9307ff;
-    transform: scaleX(0); 
-    transform-origin: bottom right;
-    transition: transform 0.3s ease;
-  }
+.nav-link {
+  color: #ffffff !important;
+  transition: color 0.3s ease;
+  font-size: 1.2rem;
+  position: relative;
+  font-weight: bold;
+}
+
+.nav-link::before {
+  content: ''; 
+  position: absolute;
+  bottom: -2px; 
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #9307ff;
+  transform: scaleX(0); 
+  transform-origin: bottom right;
+  transition: transform 0.3s ease;
+}
+
+.nav-link:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.navbar-toggler-icon {
+  background-color: #ffffff; 
+}
   
-  .nav-link:hover::before {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
-  
-  .navbar-toggler-icon {
-    background-color: #ffffff; 
-  }
-    
-  @media (max-width: 768px) {
-    .navbar-nav {
+@media (max-width: 768px) {
+  .navbar-nav {
       flex-direction: column;
       text-align: center;
-    }
-    
-    .nav-item {
-      margin-bottom: 10px;
-    }
   }
   
+  .nav-item {
+      margin-bottom: 10px;
+  }
+}
