--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,24 +1,24 @@
 .navbar {
   margin-bottom: 20px;
 }
-  
+
 .navbar-brand {
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .navbar-brand img {
-  width: 35px; 
-  height: 35px; 
-  margin-right: 10px; 
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }
 
 .nav-icon {
   margin-right: 5px;
   font-size: 18px;
-  color: #00008B;
+  color: #8c00ff;
 }
-  
+
 .nav-link {
   color: #ffffff !important;
   transition: color 0.3s ease;
@@ -28,14 +28,14 @@
 }
 
 .nav-link::before {
-  content: ''; 
+  content: '';
   position: absolute;
-  bottom: -2px; 
+  bottom: -2px;
   left: 0;
   width: 100%;
   height: 2px;
   background-color: #9307ff;
-  transform: scaleX(0); 
+  transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.3s ease;
 }
@@ -45,17 +45,13 @@
   transform-origin: bottom left;
 }
 
-.navbar-toggler-icon {
-  background-color: #ffffff; 
-}
-  
 @media (max-width: 768px) {
   .navbar-nav {
-      flex-direction: column;
-      text-align: center;
+    flex-direction: column;
+    text-align: center;
   }
-  
+
   .nav-item {
-      margin-bottom: 10px;
+    margin-bottom: 10px;
   }
 }
