--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -11,6 +11,14 @@
     margin-top: 40px;
   }
   
+  #tsparticles {
+    position: fixed !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    width: 100%;
+    height: 100%;
+  }
+
   .home-circle {
     width: 250px;
     height: 250px;
