--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,11 +1,29 @@
 .home {
-  padding: 80px 0;
+  position: relative; /* Ensure proper stacking context */
+  overflow: hidden; /* Ensure particles don't overflow */
 }
 
 .home-content {
   max-width: 800px;
+  padding-top: 100px;
+
   margin: 0 auto;
 }
+
+#tsparticles {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Ensure particles are behind other content */
+}
+
+/* Additional styling as needed */
+
+
+
+/* Additional styles as needed */
 
 .text {
   margin-top: 40px;
