--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,6 @@
 .home {
-  position: relative; /* Ensure proper stacking context */
-  overflow: hidden; /* Ensure particles don't overflow */
+  position: relative;
+  overflow: hidden;
 }
 
 .home-content {
@@ -16,25 +16,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Ensure particles are behind other content */
+  z-index: -1;
 }
-
-/* Additional styling as needed */
-
-
-
-/* Additional styles as needed */
 
 .text {
   margin-top: 40px;
-}
-
-#tsparticles {
-  position: fixed !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-  width: 100%;
-  height: 100%;
 }
 
 .home-circle {
@@ -66,8 +52,8 @@
 .text-three {
   margin-top: 20px;
   color: #8c00ff;
-  font-size: 35px;
-  font-weight: bold;
+  font-size: 45px;
+  font-weight: 900;
 }
 
 .pre-style {
