--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -19,6 +19,7 @@
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin-right: -15px;
 }
 
 .project-card:hover {
@@ -64,9 +65,17 @@
   transform: translateY(-2px);
 }
 
-/* Responsive styles */
 @media (max-width: 767px) {
   .projects-title {
     font-size: 2rem;
+  }
+
+  .col-md-4 {
+    padding-right: 0;
+  }
+
+  .project-card {
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
