--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,7 +1,8 @@
 .projects-container {
   color: #ffffff;
   text-align: center;
-  padding: 4rem 0;
+  padding-right: 10px;
+  padding-top: 4rem;
 }
 
 .projects-title {
@@ -15,27 +16,29 @@
   max-width: 100%;
   width: 100%;
   border: none;
-  border-radius: 10px;
+  border-radius: 30px;
+  background-color: transparent;
   overflow: hidden;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow: 0 6px 10px rgba(94, 94, 94, 0.74), 0 8px 12px rgba(83, 83, 83, 0.619);
+  backdrop-filter: blur(10px);
   margin-right: -15px;
 }
 
 .project-card:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgba(239, 239, 239, 0.74), 0 10px 10px rgba(250, 250, 250, 0.619);
   transform: translateY(-5px);
 }
 
 .project-card .card-img-top {
-  padding: 10px;
+  padding: 20px;
   border-radius: 30px;
   height: 250px;
 }
 
 .project-card .card-body {
   padding: 1.5rem;
-  color: #000000;
+  color: #ffffff;
 }
 
 .project-card .card-title {
@@ -45,12 +48,13 @@
 }
 
 .project-card .card-text {
-  margin-bottom: 1.5rem;
+  margin-bottom: 10px;
+  text-align: justify;
 }
 
 .project-card .btn {
-  margin-top: 15px;
-  background-color: #120027;
+  margin-top: 10px;
+  background-color: #370075;
   color: #ffffff;
   font-weight: bold;
   border: none;
@@ -60,7 +64,6 @@
 }
 
 .project-card .btn:hover {
-  background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transform: translateY(-2px);
 }
@@ -72,6 +75,12 @@
 
   .col-md-4 {
     padding-right: 0;
+    padding-left: 0;
+  }
+
+  .col{
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .project-card {
