--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -93,6 +93,9 @@
 
 @media (max-width: 768px) {
   .text-two {
-    font-size: 2rem;
+    font-size: 2.5rem;
+  }
+  .text-three{
+    font-size: 2.5rem;
   }
 }
