--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -58,7 +58,7 @@
   margin-bottom: 30px;
 }
 
-.col {
+.col-skills {
   width: 20%;
   padding: 20px;
   text-align: center;
@@ -70,7 +70,7 @@
   box-shadow: 0 2px 10px rgba(154, 154, 154, 0.775);
 }
 
-.col:hover {
+.col-skills:hover {
   transform: translateY(-5px);
   box-shadow: 0 2px 10px rgba(154, 154, 154, 0.775);
 }
@@ -81,28 +81,29 @@
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.col span {
+.col-skills span {
   font-size: 1.2rem;
   font-weight: bold;
+  padding-left: 10px;
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
 
 @media (max-width: 992px) {
-  .col {
+  .col-skills {
     width: 25%;
   }
 }
 
 @media (max-width: 768px) {
-  .col {
+  .col-skills {
     width: 33.33%;
   }
 }
 
 @media (max-width: 576px) {
-  .col {
+  .col-skills {
     width: 50%;
   }
 }
