--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
 
 .nav-icon {
   margin-right: 5px;
-  font-size: 18px;
+  font-size: 1.2rem;
   color: #8c00ff;
 }
 
@@ -23,6 +23,7 @@
   color: #ffffff !important;
   transition: color 0.3s ease;
   font-size: 1.2rem;
+  margin-left: 25px;
   position: relative;
   font-weight: bold;
 }
