--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,12 @@
 .home {
   position: relative;
   overflow: hidden;
+  min-height: 100vh;
 }
 
 .home-content {
   max-width: 800px;
-  padding-top: 100px;
-
+  padding-top: 80px;
   margin: 0 auto;
 }
 
@@ -44,13 +44,15 @@
 }
 
 .text-two {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: bold;
   color: #8c00ff;
+  margin-top: 10px;
 }
 
 .text-three {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   color: #8c00ff;
   font-size: 45px;
   font-weight: 900;
@@ -73,29 +75,45 @@
   }
 }
 
+.social-row {
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+}
+
+.social-col {
+  text-align: center;
+}
+
 .social-links {
   margin-top: 20px;
+  text-align: center;
 }
 
 .social-links a {
   display: inline-block;
-  margin-right: 10px;
-  color: #333;
+  margin: 0 10px;
+  color: #ffffff;
 }
 
 .social-links a:hover {
   color: #8c00ff;
 }
 
-.social-links i {
-  font-size: 2rem;
+.social-links .social-icon {
+  font-size: 1.5rem;
 }
 
 @media (max-width: 768px) {
+  .home-circle {
+    margin-top: 50px;
+  }
   .text-two {
     font-size: 2.5rem;
+    margin-top: 20px; 
   }
-  .text-three{
-    font-size: 2.5rem;
+  .text-three {
+    font-size: 2.3rem;
+    margin-top: 20px;
   }
 }
