--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -56,7 +56,7 @@
   border-radius: 2px;
 }
 
-.row {
+.row.PL, .row.WT, .row.DB, .row.TP {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
