--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,9 @@
     background-color: #8686861a;
     backdrop-filter: blur(10px);
     color: #fff;
-    padding: 0px 0;
     width: 100%;
+    overflow-x: hidden;
+    position: relative;
   }
   
   .social-links {
@@ -26,7 +27,7 @@
   
   .footer-text {
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 10px;
   }
   
   @media (max-width: 576px) {
