--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -78,7 +78,9 @@
 .social-row {
   position: fixed;
   bottom: 10px;
-  width: 100%;
+  width: 100vw;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .social-col {
