--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,21 +1,31 @@
+/* Ensuring the container is centered and uses full width correctly */
 .projects-container {
+  padding-top: 120px;
   color: #ffffff;
   text-align: center;
-  padding-right: 10px;
-  padding-top: 4rem;
+  width: 100%;
+  overflow-x: hidden;
+  margin: 0 auto;
 }
 
+/* Styling for project titles */
 .projects-title {
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
   font-size: 3rem;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
+/* Ensuring no overflow for project rows */
+.project-row {
+  padding: 0 1rem;
+  margin: 0;  /* Remove any extra margins */
+}
+
+/* Ensuring no overflow for project cards */
 .project-card {
-  max-width: 100%;
-  width: 100%;
   border: none;
+  width: 100%;  /* Full width within the column */
   border-radius: 30px;
   background-color: transparent;
   overflow: hidden;
@@ -23,7 +33,7 @@
   box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  margin-right: -15px;
+  margin-bottom: 2rem;  /* Space between cards */
 }
 
 .project-card:hover {
@@ -31,6 +41,7 @@
   transform: translateY(-5px);
 }
 
+/* Ensuring no overflow for images */
 .project-card .card-img-top {
   padding: 20px;
   border-radius: 30px;
@@ -69,23 +80,18 @@
   transform: translateY(-2px);
 }
 
+/* Ensuring responsiveness and no overflow for small screens */
 @media (max-width: 767px) {
   .projects-title {
     font-size: 2rem;
   }
 
-  .col-md-4 {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  .col{
-    padding-right: 0;
-    padding-left: 0;
+  .project-row {
+    padding: 0 0.5rem;
   }
 
   .project-card {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    width: 100%;
+    margin-bottom: 1rem;
   }
 }
