--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
   
   .social-links {
     margin-bottom: 10px;
+    margin-top: 10px; /* Added margin-top to match footer-text */
   }
   
   .social-links a {
@@ -27,7 +28,7 @@
   
   .footer-text {
     font-size: 18px;
-    margin-top: 10px;
+    margin-top: 10px; /* Added margin-top to match social-links */
   }
   
   @media (max-width: 576px) {
