--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -6,9 +6,11 @@ html, body {
   padding: 80px 0;
 }
 
-.contact h2 {
+.contact-form h2 {
   font-size: 2.5rem;
   margin-bottom: 20px;
+  color: #fff;
+  
 }
 
 .contact-svg {
