--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,13 +4,13 @@ html, body {
 
 .contact-container {
   padding: 80px 0;
+  /* background-color: rgba(0, 0, 0, 0.7); */
 }
 
 .contact-form h2 {
   font-size: 2.5rem;
   margin-bottom: 20px;
   color: #fff;
-  
 }
 
 .contact-svg {
@@ -27,8 +27,24 @@ html, body {
   margin-bottom: 20px;
 }
 
+.form-control {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+}
+
+.form-control:focus {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.form-control::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 @media (max-width: 768px) {
-  .contact h2 {
+  .contact-form h2 {
     font-size: 2rem;
   }
 }
