--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,15 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+  /* background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35)); */
+  background-image: linear-gradient(to left, rgb(0, 0, 20), rgb(0, 0, 20));
+
+}
+
+.star-background {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  inset: 0;
+  z-index: -1;
 }
