--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .contact-form h2 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 20px;
   color: #fff;
 }
@@ -28,17 +28,17 @@ html, body {
 }
 
 .form-control {
-  background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  background-color: transparent;
+
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
   color: #fff;
-  border: none;
   border-radius: 5px;
   padding: 10px 15px;
 }
 
 .form-control:focus {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.342);
 }
 
 .form-control::placeholder {
