--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -26,7 +26,7 @@
   color: #ffffff !important;
   transition: all 0.3s ease;
   font-size: 1.2rem;
-  margin-left: 25px;
+  /* margin-left: 25px; */
   position: relative;
   font-weight: bold;
   padding: 10px 15px;
@@ -36,7 +36,7 @@
 
 .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.1);
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
   text-shadow: none;
 }
 
