🧑‍💻 Added Postman skill icon and updated CSS to include Postman color

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -30,6 +30,7 @@
 .skill-icon.sass { color: #CC6699; }
 .skill-icon.aws { color: #FF9900; }
 .skill-icon.graphql { color: #E10098; }
+.skill-icon.postman { color: #ff6200; }
 .skill-icon.restapi { color: #000000; }
 .skill-icon.qiskit { color: #ffffff; }
 
